GNOME Bugzilla – Bug 727876
Segmentation Fault in Scan_Rename_File_Prefix_Path
Last modified: 2014-04-09 07:45:59 UTC
Steps to reproduce: Open Easytag. Select a folder which has no files in it. Goto Show Scanner. Select "Rename File and Directory". Click on "Prefix mask with current path" button.
Similar problem has been report here https://retrace.fedoraproject.org/faf/problems/1641130/
Created attachment 273852 [details] [review] This patch will fix the above bug
Comment on attachment 273852 [details] [review] This patch will fix the above bug Good find! I modified the patch slightly (mostly the commit message) and pushed to master as 6d878e8a48fb2bb78c235d90fdce129526060c21.