Avoid NULL deref in Scan_Rename_File_Prefix_Path()

Check if the current path is non-empty before trying to use the name of
the currently-displayed file.

https://bugzilla.gnome.org/show_bug.cgi?id=727876
https://retrace.fedoraproject.org/faf/problems/1641130/